<?xml version="1.0"?>
<package format="2">
  <name>tf_republisher</name>
  <version>0.0.0</version>
  <description>Package for calibrating and republishing transform for
    kinect and fisheye frames</description>

  <maintainer email="aphung@mit.edu">Amy Phung</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
